# pathsim

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  README.md  README_PYPI.md  ROADMAP.md  _ul-Milan-PC-2024  coverage.json  debug_convergence.py  graph_all_examples.py  pyproject.toml  requirements.txt  setup.py  test_minimal_euler.py
.github/: FUNDING.yml
docs/: .readthedocs.yaml  requirements.txt
examples/: example.dot  example_abs_braking.py  example_adc.py  example_algebraicchain.py  example_algebraicloop.py  example_bacterial_fairenvelarde.py  example_bonhoeffer_vanderpol.py  example_bouncingball.py  example_bouncingball_switched.py  example_cascade.py  example_chemical.py  example_costasloop.py  example_dcmotor.py  example_deltasigma.py  example_derivative.py  example_diff.py  example_differentiable.py  example_diode.py  example_dualslope.py  example_duffing.py  example_feedback.py  example_filters.py  example_fitzhughnagumo.py  example_flame.py  example_glycolysis.py  example_harmonic_oscillator.py  example_harmonicoscillator.py  example_integrator_reset.py  example_kalman_filter.py  example_lorenz.py  example_morse.py  example_nested_subsystems.py  example_noise.py  example_pendulum.py  example_phasenoise.py  example_pid.py  example_pid_antiwindup.py  example_pid_vs_discretePID.py  example_pid_windup.py  example_pll.py  (+23 more)
paper/: paper.bib  paper.md
pathsim/: __init__.py  _constants.py  connection.py  event.py  simulation.py  subsystem.py
tests/: README.md  test_connection.py  test_simulation.py  test_subsystem.py
(+558 files in other folders)
